RAFD-15: update the README.md with the guavus steps section